[gd_scene load_steps=7 format=2]

[ext_resource path="res://student.gd" type="Script" id=1]
[ext_resource path="res://Assets/kenney_top-down-shooter/PNG/Man Blue/manBlue_hold.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 455.04

[sub_resource type="CircleShape2D" id=4]
radius = 13.0384

[node name="student" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 11
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="attack_box" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_box"]
shape = SubResource( 4 )

[node name="hit_timer" type="Timer" parent="."]
one_shot = true

[node name="name_teg" type="Label" parent="."]
margin_left = -24.0
margin_top = -38.0
margin_right = 25.0
margin_bottom = -24.0
text = "student"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
